# ast

./: .dockerignore  .gitignore  CLI_USAGE.md  COMPATIBILITY.md  DOGFOODING_STRATEGY.md  Dockerfile  MANIFEST.md  PERFORMANCE_BASELINE.json  PROJECT_STRUCTURE.md  README.md  TESTING_GUIDE.md  TOOLS_INVENTORY.md  analyze_test_quality.py  dogfood_analysis.py  download_test_repos.py  example.py  pyproject.toml  pytest.ini  run_benchmarks.py  test_reference_finding.py
.github/workflows/: 01-build-docker.yml  02-test-docker.yml  README.md  claude-code-agent.yml  claude-code-review.yml  docker.yml  test.yml
astlib/: __init__.py  api.py  benchmark.py  cache.py  call_graph.py  cli.py  finder.py  import_graph.py  imports.py  indexer.py  parser.py  references.py  symbol_table.py  symbols.py  types.py  visitor.py  walker.py
docs/: README.md
docs/guides/: ARCHITECTURAL_PATTERNS.md  BENCHMARKING.md  LAYERED_ARCHITECTURE.md  TESTING_GUIDELINES.md
docs/planning/: ITERATIVE_DELIVERY.md  PLAN.md
examples/: demo_symbol_extraction.py
scripts/: create_baseline.py  run_integration_tests.sh  run_tests.sh
tests/: README.md  __init__.py  conftest.py  factories.py  test_dogfood.py  test_infrastructure.py  test_unified_api.py
tests/e2e/: test_cli_commands.py
tests/fixtures/: mock_repos.py
tests/helpers/: __init__.py  ast_helpers.py  code_helpers.py  hypothesis_strategies.py  performance_helpers.py
tests/integration/: test_performance.py  (+6 more)
validation/: README.md  analyze_results.py  dogfood_tracker.py  generate_regression_tests.py  stats_report.md  test_harness.py  validate.py
(+37 files in other folders)
